# sqlalchemy-heavyai

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HISTORY.md  LICENSE.md  Makefile  README.md  api.html  contributing.html  contributors.html  environment-release.yaml  environment.yaml  genindex.html  history.html  index.html  installation.html  intro.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements_dev.txt  rever.xsh  search.html  searchindex.js  setup.cfg  setup.py  sqlalchemy_omnisci.html  usage.html
.github/workflows/: docs.yaml  docs.yml  main.yaml  main.yml  release.yaml
_autosummary/: sqlalchemy_heavyai.base.html  sqlalchemy_heavyai.heavyai.html  sqlalchemy_heavyai.html  sqlalchemy_heavyai.provision.html  sqlalchemy_heavyai.requirements.html  sqlalchemy_heavyai.util.html  sqlalchemy_heavyai.version.html  sqlalchemy_omnisci.base.html  sqlalchemy_omnisci.html  sqlalchemy_omnisci.provision.html  sqlalchemy_omnisci.pyomnisci.html  sqlalchemy_omnisci.requirements.html  sqlalchemy_omnisci.util.html  sqlalchemy_omnisci.version.html
_modules/: index.html
_modules/sqlalchemy_heavyai/: base.html  heavyai.html  provision.html  requirements.html  util.html  version.html
_modules/sqlalchemy_omnisci/: _version.html  base.html  provision.html  pyomnisci.html  requirements.html  util.html  version.html
_sources/: api.rst  index.rst.txt  installation.rst.txt  modules.rst.txt  sqlalchemy_omnisci.rst.txt  usage.rst.txt
_sources/_autosummary/: sqlalchemy_heavyai.base.rst  sqlalchemy_heavyai.heavyai.rst  sqlalchemy_heavyai.provision.rst  sqlalchemy_heavyai.requirements.rst  sqlalchemy_heavyai.rst  sqlalchemy_heavyai.util.rst  sqlalchemy_heavyai.version.rst  sqlalchemy_omnisci.base.rst  sqlalchemy_omnisci.provision.rst  sqlalchemy_omnisci.pyomnisci.rst  sqlalchemy_omnisci.requirements.rst  sqlalchemy_omnisci.rst  sqlalchemy_omnisci.util.rst  sqlalchemy_omnisci.version.rst
_sources/autoapi/: index.rst
_sources/tutorials/: Introduction.ipynb
_static/: documentation_options.js
autoapi/: index.html
autoapi/sqlalchemy_heavyai/: index.html
autoapi/sqlalchemy_omnisci/: index.html
docker/: Dockerfile.superset  docker-compose.yaml  heavydb.conf  omnisci.conf  setup-superset.sh  superset-heavyai.py  superset-omnisci.py
docs/: Makefile  _config.yml  _toc.yml  conf.py  contributing.md  installation.rst  intro.md  make.bat  patch.py  usage.rst
sqlalchemy_heavyai/: __init__.py  base.py  heavyai.py  provision.py  requirements.py  util.py  version.py
sqlalchemy_omnisci/: __init__.py  base.py  provision.py  pyomnisci.py  requirements.py  util.py  version.py
tests/: __init__.py  conftest.py  runapptest.py  test_ci.py  test_compiler.py  test_connection.py  test_orm.py  test_package.py  test_sqlalchemy_omnisci.py  test_suite.py  util.py
tutorials/: Introduction.html  intro.html
(+36 files in other folders)
