[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "sqlalchemy_omnisci/_version.py"

[tool.black]
line-length = 79
target-version = ["py36", "py37", "py38"]

[tool.isort]
ensure_newline_before_comments = true
line_length = 79
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
skip = "docs/"

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
files = "sqlalchemy_omnisci"

[tool.pytest]
addopts= "--tb native -v -r fxX -p no:warnings"
python_files = "tests/*test_*.py"
