[build-system]
requires = ["flit_core >=3.3,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sqlalchemy-heavyai"
version = "1.0"
requires-python = ">=3.7"
authors = [{name = "Heavy.AI", email = "community@heavy.ai"}]
description = "HeavyAI SQLAlchemy Driver"
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "sqlalchemy<2",
    "heavyai",
    "importlib_metadata",  # drop for python >3.7
]

[project.optional-dependencies]
test = [
    "pytest",
]

doc = [
    "sphinx",
    "jupyter-book",
    "sphinx-external-toc",
    "sphinx-autoapi",
    "sphinx-jupyterbook-latex",
]

dev = [
    "sqlalchemy-heavyai[test]",
    "sqlalchemy-heavyai[doc]",
    "pre-commit",
    "flit"
]

[project.urls]
Home = "https://github.com/heavyai/sqlalchemy-heavyai"
Source = "https://github.com/heavyai/sqlalchemy-heavyai"

[tool.flit.module]
name = "sqlalchemy_heavyai"

[tool.flit.sdist]
exclude = [
    "docker/*", ".github/*", "*.yaml", ".*", "tests/*", "docs/*"
]

[tool.black]
line-length = 79
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
ensure_newline_before_comments = true
line_length = 79
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
skip = "docs/"

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
files = "sqlalchemy_heavyai"

[tool.pytest.ini_options]
minversion = "6.0"
addopts= "--tb native -v -r fxX -p no:warnings"
testpaths = [
    "sqlalchemy_heavyai/tests",
]
